tests/error/if_input.ca
if 1
    print('hi')
