tests/error/if_input.ca.output
Error occurred:
[tests/error/if_input.ca:1,0] if()
Case expected bool input, found: 1

